<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".modificar_usuario">




    <EditText
        android:id="@+id/modificarusuario_cedula"
        android:layout_width="match_parent"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="35dp"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/crearusuario_cedula"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buscar_usuario_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/buscar_usuario_boton"
        app:layout_constraintBottom_toTopOf="@+id/modificarusuario_nombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"


        app:layout_constraintLeft_toRightOf="@+id/modificarusuario_cedula"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/modificarusuario_nombres"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/crearusuario_nombres"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modificarusuario_cedula" />

    <EditText
        android:id="@+id/modificarusuario_apellidos"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/crearusuario_apellidos"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modificarusuario_nombres" />

    <EditText
        android:id="@+id/modificarusuario_usuario"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/crearusuario_usuario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modificarusuario_apellidos" />

    <EditText
        android:id="@+id/modificarusuario_contraseña"
        android:layout_width="345dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/crearusuario_contraseña"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modificarusuario_usuario" />

    <RadioGroup
        android:id="@+id/modificarusuario_roll"
        android:layout_width="339dp"
        android:layout_height="149dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/modificarusuario_contraseña">

        <RadioButton
            android:id="@+id/modificar_btn_administrador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crearusuario_rol_administrador" />

        <RadioButton
            android:id="@+id/modificar_btn_abogado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crearusuario_rol_abogado" />

        <RadioButton
            android:id="@+id/modificar_btn_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crearusuario_rol_cliente" />

    </RadioGroup>

    <Button
        android:id="@+id/eliminar_usuario_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/eliminar_usuario_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarusuario_roll" />

    <Button
        android:id="@+id/modificar_usuario_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/modificar_usuario_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarusuario_roll" />
</androidx.constraintlayout.widget.ConstraintLayout>