<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LegisUnicor"
        android:layout_width="217dp"
        android:layout_height="49dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/convergence"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logoImageView" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="371dp"
        android:layout_height="219dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo_unicor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_unicor"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/textUser"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/login_usuario"
        android:inputType="text"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LegisUnicor" />

    <EditText
        android:id="@+id/textPass"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login_contrasena"
        android:inputType="textPassword"
        android:minWidth="200dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUser" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="176dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#84C34C"
        android:text="@string/login_btn_iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPass" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>
